fixed the image stretch on large screens

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -66,7 +66,7 @@
   right: 1rem;
 }
 
-@media (max-width: 760px) {
+@media (max-width: 860px) {
     .gallery-images-container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
